Update samples
